<resources>
    <string name="app_name">Triviup</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="username">Username</string>
    <string name="scoreboard">Scoreboard</string>
<<<<<<< HEAD
    <string name="menu">Menu</string>
=======
    <string name="learn">Learn</string>
    <string name="scoreboard_2">ScoreBoard</string>
    <string name="play">Play</string>
    <string name="menu">Menu</string>
    <string name="new_fact">New Fact</string>
    <string name="fact">Fact</string>
>>>>>>> 1e9fe608fd13844061798ad9dc12bb6e99bd993d
</resources>